# copper-rs

./: Cargo.toml
examples/hello_world/: Cargo.toml  copperconfig.ron
examples/hello_world/src/: main.rs  tasks.rs
support/docker/: Dockerfile
