[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
default-run = "hello-world"

# The main executable of your application
[[bin]]
name = "hello-world"
path = "src/main.rs"

# A custom made log reader application for your application.
[[bin]]
name = "hello-world-logreader"
path = "src/logreader.rs"

[dependencies]
# FIXME: This is to be able to test pre-release.
cu29 = { workspace = true }
cu29-traits = { workspace = true }
cu29-derive = { workspace = true }
cu29-helpers = { workspace = true }
cu29-log = { workspace = true }
cu29-log-runtime = { workspace = true }
cu29-log-derive = { workspace = true }
cu29-unifiedlog = { workspace = true }

cu29-export = { workspace = true }
bincode = { workspace = true }
cu-consolemon = { path = "../../components/monitors/cu_consolemon", version = "0.3.1"}

ctrlc = "3.4.5"


